# FastAPI_Learning

Day1_3/: pyproject.toml
Day1_3/day1_3/: main.py  zee.py
Day4-6/Day12/class11/: .env  pyproject.toml
Day4-6/Day12/class11/class11/: Models.py  auth.py  db.py  main.py  settings.py
Day4-6/Day12/class11/class11/router/: user.py
Day4-6/Day4/day4/: .env  README.md  pyproject.toml
Day4-6/Day4/day4/day4/: database.py  main.py  model.py  name.ipynb
Day4-6/Day5/day5/: .env  pyproject.toml
Day4-6/Day7/class7/: .env  pyproject.toml
Day4-6/Day7/class7/class7/: database.py  maain.py  main.py  model.py  setting.py
Day4-6/Day8/class8/: .env  pyproject.toml
Day4-6/Day8/class8/class8/: database.py  main.py  models.py  setting.py
Day4-6/Day9/class9/: .env  pyproject.toml
Day4-6/Day9/class9/class9/: database.py  main.py  models.py  setting.py
Day4-6/creaingTodoApp/TodoApp/: pyproject.toml
Day4-6/creaingTodoApp/TodoApp/todoapp/: .env  db.py  main.py  setting.py
Day4-6/day10/class10/: .env  README.md  pyproject.toml
Day4-6/day10/class10/class10/: auth.py  db.py  main.py  models.py  setting.py  shalow.ipynb
Day4-6/day10/class10/class10/router/: user.py
Day4-6/day11/class1/: pyproject.toml
Day4-6/day11/class1/class1/: .env  auth.py  db.py  main.py  models.py  settings.py
Day4-6/day11/class1/class1/router/: user.py
